fix issue that when width is smaller the dashboard layout break

--- a/assets/www/css/MainScreen.less
+++ b/assets/www/css/MainScreen.less
@@ -10,7 +10,7 @@
 }
 .mainScreen .leftExternalContainer{
   display:none;
-	min-width:250px;
+	min-width:300px;
 	width:30%;
 	height:100%;
 	position:absolute;
